<resources>
    <string name="app_name">mySherpa</string>
    <string name="ok">OK</string>
    <string name="searchbar_placeholder">Cerca qui</string>
    <string name="bottom_nav_bookmark">Saved</string>
    <string name="bottom_nav_route">Route</string>
    <string name="bottom_nav_explore">Explore</string>
    <string name="bottom_nav_record">Record</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="gps_not_enabled">Impossibile acquisire il GPS</string>
    <string name="no_bookmarks">Non ci sono percorsi preferiti</string>
    <string name="save_dialog_title">Salva Percorso</string>
    <string name="save">Salva</string>
    <string name="cancel">Cancella</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="save_hint">Nome percorso</string>
    <string name="default_timer_text">00:00:00</string>
    <string name="default_meters_text">0 m</string>
    <string name="default_elevation_description">Elevazione Attuale</string>
    <string name="default_time_description">Tempo Trascorso</string>
    <string name="default_distance_description">Distanza Percorsa</string>
    <string name="registrazioni_passate">Registrazioni Passate</string>
    <string name="mypositionbutton">mypositionbutton</string>
    <string name="traveled_distance_prefix">Distanza Percorsa:</string>
    <string name="total_time_prefix">Tempo Totale:</string>
    <string name="delete_record_dialog_prefix">Rimuovere definitivamente</string>
    <string name="partenza">Partenza</string>
    <string name="arrivo">Destinazione</string>
    <string name="no_gpx_intent_fount">Nessuna applicazione GPX</string>
    <string name="tema_scuro">Tema Scuro</string>
    <string name="lingua_inglese">Lingua inglese</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>