<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.Record_Fragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_start_record"
        style="?attr/floatingActionButtonLargeStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/md_theme_light_background"
        android:src="@drawable/ic_round_play_circle_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_stop_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_theme_dark_error"
        android:layout_toStartOf="@id/button_start_record"
        android:layout_centerVertical="true"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_round_delete_outline_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_save_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:backgroundTint="@color/save"
        android:layout_toEndOf="@id/button_start_record"
        android:layout_marginStart="15dp"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_baseline_save_24" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/distance_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="260dp"
        android:layout_alignBottom="@id/button_start_record"
        android:text="@string/default_meters_text"
        android:textSize="52sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/distance_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="240dp"
        android:layout_alignBottom="@id/button_start_record"
        android:text="@string/default_distance_description"
        android:textSize="20sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/elevation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="140dp"
        android:layout_alignBottom="@id/button_start_record"
        android:text="@string/default_meters_text"
        android:textSize="52sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/elevation_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:layout_alignBottom="@id/button_start_record"
        android:text="@string/default_elevation_description"
        android:textSize="20sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/record_time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_alignTop="@id/button_start_record"
        android:inputType="time"
        android:text="@string/default_timer_text"
        android:textSize="52sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/time_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:layout_alignTop="@id/button_start_record"
        android:text="@string/default_time_description"
        android:textSize="20sp" />

    <Button
        style="@style/Widget.Material3.Button"
        android:id="@+id/show_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:layout_alignTop="@id/button_start_record"
        android:text="Lista Registrazioni"
        />


</RelativeLayout>